:bug: fix key name in compose.yaml

--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -15,7 +15,7 @@ services:
     image: docker.io/google/cloud-sdk:494.0.0
     ports:
       - 8085:8085
-    environments:
+    environment:
       PROJECT_ID: $PROJECT_ID
       EMULATOR_HOST: 0.0.0.0:8085
     command: /bin/sh -c "gcloud beta emulators pubsub start --project=$PROJECT_ID --host-port=$EMULATOR_HOST"
