--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -1,1 +1,5 @@
 PROJECT_ID=pubsub-sample
+TOPIC_ID=topic-sample
+DEAD_LETTER_TOPIC_ID=dead-letter-topic-sample
+SUBSCRIPTION_ID=subscription-sample
+DEAD_LETTER_SUBSCRIPTION_ID=dead-letter-subscription-sample
