--- a/.devcontainer/Containerfile
+++ b/.devcontainer/Containerfile
@@ -1,7 +1,7 @@
 FROM golang:1.22.4-alpine3.20
 
 RUN apk update \
-    && apk add git~=2.45.2 \
-        curl~=8.9.1 \
-        golangci-lint~=1.57.2 \
-        make~=4.4.1
+    && apk add git \
+        curl \
+        make \
+        golangci-lint~=1.57.2
